--- a/job.html
+++ b/job.html
@@ -16,13 +16,62 @@
     </header>
 
     <main class="container main-content">
-        <div id="roleSelection" class="role-selection">
-            <h2 class="section-title">Select User Role:</h2>
+        <div id="authSection" class="role-selection">
+            <h2 class="section-title">Welcome</h2>
             <div class="role-buttons">
-                <button onclick="selectRole('admin')" class="btn btn-primary">Admin</button>
-                <button onclick="selectRole('student')" class="btn btn-primary">Student</button>
-                <button onclick="selectRole('recruiter')" class="btn btn-primary">Recruiter</button>
+                <button onclick="showRegisterForm()" class="btn btn-primary">Register</button>
+                <button onclick="showLoginForm()" class="btn btn-primary">Login</button>
             </div>
+        </div>
+
+        <!-- Registration Form -->
+        <div id="registerForm" class="view hidden">
+            <h2 class="section-title">Register</h2>
+            <form id="registerFormElement" class="form">
+                <div class="form-group">
+                    <label for="regUsername" class="form-label">Username</label>
+                    <input type="text" id="regUsername" class="form-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="regPassword" class="form-label">Password</label>
+                    <input type="password" id="regPassword" class="form-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="regSecretId" class="form-label">Secret ID</label>
+                    <input type="text" id="regSecretId" class="form-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="regRole" class="form-label">Role</label>
+                    <select id="regRole" class="form-input">
+                        <option value="student">Student</option>
+                        <option value="recruiter">Recruiter</option>
+                        <option value="admin">Admin</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="button" onclick="backToAuth()" class="btn btn-danger">Back</button>
+            </form>
+        </div>
+
+        <!-- Login Form -->
+        <div id="loginForm" class="view hidden">
+            <h2 class="section-title">Login</h2>
+            <form id="loginFormElement" class="form">
+                <div class="form-group">
+                    <label for="loginUsername" class="form-label">Username</label>
+                    <input type="text" id="loginUsername" class="form-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword" class="form-label">Password</label>
+                    <input type="password" id="loginPassword" class="form-input" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginSecretId" class="form-label">Secret ID</label>
+                    <input type="text" id="loginSecretId" class="form-input" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="button" onclick="backToAuth()" class="btn btn-danger">Back</button>
+            </form>
         </div>
 
         <!-- Student View -->
